--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header id="header" class="bg-primary text-light text-center position-relative">
       <h1>My Advanced Blog</h1>
       <nav class="d-flex justify-content-center mt-4">
-        <a href="#" class="text-light fw-bold text-decoration-none">Home</a>
-        <a href="#" class="text-light fw-bold text-decoration-none">About</a>
-        <a href="#" class="text-light fw-bold text-decoration-none">Contact</a>
-        <a href="#" class="text-light fw-bold text-decoration-none">Portfolio</a>
+        <a href="#" class="text-light fw-bold">Home</a>
+        <a href="#" class="text-light fw-bold">About</a>
+        <a href="#" class="text-light fw-bold">Contact</a>
+        <a href="#" class="text-light fw-bold">Portfolio</a>
       </nav>
     </header>
 
